Fixed feature table breaking layout on mobile devices

--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -484,6 +484,7 @@ table.features-table {
 
   th, td {
     padding: 0.25rem;
+    word-break: break-word;
   }
   
   tr th:first-child {
